fix mobile design overflow value

--- a/app/scss/layout/_body.scss
+++ b/app/scss/layout/_body.scss
@@ -4,7 +4,7 @@ body {
   font-family: var(--ff--Primary);
   font-size: var(--fs--regular);
   color: var(--clr--dark-slate-grey);
-  overflow-y: hidden;
+
   ul {
     list-style-type: none;
     padding: 0;
