--- a/app/scss/layout/_container.scss
+++ b/app/scss/layout/_container.scss
@@ -1,9 +1,6 @@
 @use "../layout/util/" as u;
 
 .container {
-  position: fixed;
-  top: 0;
-  bottom: 0;
   min-height: 100vh;
   display: grid;
 
